@@ -1,4 +1,11 @@
-Current Development Version: JTSDK Nix v2.0.4
+Current Development Version: JTSDK Nix v2.0.16
+
+2015-11-07 Greg Beam <ki7mt@yahoo.com>
+
+* Remove KVASD requirment for WSJT-X Exp Branch
+* Fixed menus after a dialog package update
+* Currently, there are not RC builds, so it is disabled
+
 
 2015-29-05 Greg Beam <ki7mt@yahoo.com>
 
